# ft_vox

./: .exrc  .gitignore  CMakeLists.txt  Makefile  README.md  TODO  bit-mask  chunkDefs  fetch-dependencies.sh
assets/structures/: features_declaration.h  features_definitions.cpp
framework/classes/: BufferGL.cpp  BufferGL.hpp  Camera.cpp  Camera.hpp  Noise.cpp  Noise.hpp  PMapBuffer.hpp  PMapBufferGL.cpp  PMapBufferGL.hpp  PriorityMutex.cpp  PriorityMutex.hpp  Profiler.cpp  Profiler.hpp  Shader.cpp  Shader.hpp  SkyBox.cpp  SkyBox.hpp  Window.cpp  Window.hpp
includes/: chunk.h  config.hpp  glm-ext.cpp
includes/classes/: AChunk.cpp  AChunk.hpp  Chunk.cpp  Chunk.hpp  ChunkGeneration.cpp  CloudSystem.cpp  CloudSystem.hpp  FlagHandler.cpp  FlagHandler.hpp  LayeredChunk.cpp  LayeredChunk.hpp  Matrixes.hpp  MeshBGM.cpp  MeshGeneration.cpp  Noise.cpp  Noise.hpp  PMapBuffer.cpp  PMapBuffer.hpp  PersistentBuffer.cpp  PersistentBuffer.hpp  Profiler.cpp  Profiler.hpp  Shader.cpp  Shader.hpp  SkyBox.cpp  SkyBox.hpp  VoxelSystem.cpp  VoxelSystem.hpp  VoxelSystem.tpp  Window.cpp  Window.hpp  WindowsHandler.cpp  WindowsHandler.hpp  old_VoxelSystem.cpp  old_VoxelSystem.hpp
includes/classes/Chunks/: AChunk.cpp  AChunk.hpp  ChunkHandler.cpp  ChunkHandler.hpp  ChunkImpl.cpp  ChunkImpl.hpp  ChunkMesh.cpp  ChunkMesh.hpp  LayeredChunk.cpp  LayeredChunk.hpp
shaders/: PostProcessing_frag.glsl  PostProcessing_vert.glsl  ShadowMap_frag.glsl  ShadowMap_vert.glsl  Skybox_frag.glsl  Skybox_vert.glsl  VoxelGeometrie_frag.glsl  VoxelGeometrie_vert.glsl  VoxelLighting_frag.glsl  VoxelLighting_vert.glsl  VoxelSSAO_frag.glsl  VoxelSSAO_vert.glsl  Voxel_frag.glsl  Voxel_vert.glsl  fragment.glsl  geometry.glsl  vertex.glsl
srcs/: events.cpp  flags.cpp  main.cpp  rendering.cpp  routine.cpp  utils.cpp
